# quarto-test

./: .gitignore  .nojekyll  _quarto.yml  about.html  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
_freeze/posts/post-with-code/index/execute-results/: html.json
_freeze/posts/pyvis/index/execute-results/: html.json
posts/post-with-code/: index.html  index.qmd
posts/pyvis/: example2.html  gameofthrones.html  index.html  index.ipynb  index.qmd
posts/pyvis/.ipynb_checkpoints/: index-checkpoint.ipynb
posts/welcome/: index.html
