[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
description = "Add a short description here"
name = "quarto-test"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
quarto_test = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
jupyter = ">=1.1.1,<2"
yaml = ">=0.2.5,<0.3"
numpy = ">=2.1.3,<3"
matplotlib = ">=3.9.3,<4"
pyvis = ">=0.3.1,<0.4"
pandas = ">=2.2.3,<3"
